Minor fixes and cleanup

--- a/apps/ledger-live-desktop/tsconfig.json
+++ b/apps/ledger-live-desktop/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "composite": true,
-    "allowJs": false,
+    "allowJs": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "isolatedModules": true,
