--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -55,7 +55,9 @@
     "https": false
   },
   "dependencies": {
+    "@celo/connect": "^2.0.0",
     "@celo/contractkit": "^2.0.0",
+    "@celo/utils": "^2.0.0",
     "@celo/wallet-base": "^2.0.0",
     "@celo/wallet-ledger": "^2.0.0",
     "@cosmjs/amino": "^0.28.4",
