--- a/libs/ledger-live-common/package.json
+++ b/libs/ledger-live-common/package.json
@@ -21,10 +21,11 @@
     "lint:fix": "pnpm lint --fix",
     "jest": "cross-env TZ=America/New_York jest",
     "typecheck": "tsc --noEmit -p src/tsconfig.json",
-    "test": "pnpm ci-test-common",
     "ci-lint": "pnpm lint",
-    "ci-test-common": "env-cmd -f ./.ci.env pnpm jest --ci --updateSnapshot && git diff --exit-code src",
-    "ci-test-bot": "env-cmd -f ./.ci.env pnpm jest --testMatch '**/*.bot.ts'"
+    "test": "pnpm ci-test-unit",
+    "ci-test-unit": "env-cmd -f .ci.unit.env pnpm jest --ci --updateSnapshot && git diff --exit-code src",
+    "ci-test-integration": "env-cmd -f .ci.integration.env pnpm jest --ci --updateSnapshot",
+    "ci-test-bot": "pnpm jest --testMatch '**/*.bot.ts'"
   },
   "files": [
     "lib",
